# for display continuity sake please use 2 spaces instead of tabs

2015-12-03 ede
  * added Nicolas Ribot's Oracle Spatial Datastore Extension to CORE
    activates in PLUS as it needs DBQuery's *gt2-oracle-spatial-2.x.jar*
    also *ojdbc6.jar* must be downloaded and installed manually because
    of licensing restrictions
  * extensions can hold messages now (eg. tell why they are not activated) 

2015-11-23 mmichaud <m.michael.michaud@orange.fr>
  * Fix bug #411 : plugins in attributeTable context menu was deactivated

2015-11-19 bertazza <bertazza@gmail>
  * Removed reference to IndentingXMLStreamWriter class in SLDHandler class

2015-11-19 bertazza <bertazza@gmail.com>
  * Raster styler: added options to save and load symbology as SLD file, 
  added option to invert ramp for stretched symbology, added given interval
  classification method, added some more default symbologies, fixed some bugs
  * esri Floating Point grid header writer: bug fixed
  * RasterImageLayer: fixed few bugs related to overall and single cell
  transparency

2015-11-13 Giuseppe Arta  <giuseppe_aruta@yahoo.it>
  * Added Measure Toolbox Extension version 11 to OpenJUMP Plus
    Documentation is available here: http://sourceforge.net/projects/opensit
    /files/Openjump/PlugIn/MeasureExtension/Measure%20toolbox_11.pdf/download
  
2015-10-18 Giuseppe Aruta <giuseppe_aruta@yahoo.it>
  * workaround for OpenJUMP bug 410 (Sextante), If nodata value is -3.40282346639E38
  and min value -9999, -99999 or 1.70141E38. Those two values are displayed in red
  on DEMStatistic table

2015-10-18 mmichaud <m.michael.michaud@orange.fr>
  * Small fix in BeanshellAttributeCalculatorPlugIn
  * DatastoreDataSource now present tables in alphabetical order

2015-10-07 bertazza
  * Fixed bug when reading esri ASCII grid with .txt extension

2015-10-06 bertazza
  * Fixed bug when reading ASCII grid cell value
  
2015-10-05 bertazza
  * Added "TXT" among the accepted extensions for raster loader.

2015-09-20 ede