@@ -1,5 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
+2015-12-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
+   * Added CutFeatures tool into the editing toolbox
+   * This tool partially derives from SplitPolygonPlugIn.class from Kosmo SAIG
+   * It has been modified to be used both with selected Linestrings and Polygons.
+ 
 2015-12-03 ede
   * added Nicolas Ribot's Oracle Spatial Datastore Extension to CORE
     activates in PLUS as it needs DBQuery's *gt2-oracle-spatial-2.x.jar*
@@ -21,7 +26,7 @@
   * RasterImageLayer: fixed few bugs related to overall and single cell
   transparency
 
-2015-11-13 Giuseppe Arta  <giuseppe_aruta@yahoo.it>
+2015-11-13 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
   * Added Measure Toolbox Extension version 11 to OpenJUMP Plus
     Documentation is available here: http://sourceforge.net/projects/opensit
     /files/Openjump/PlugIn/MeasureExtension/Measure%20toolbox_11.pdf/download
